# rltos

./: .gitignore  CreateCoverageReport.bat  LICENSE  README.md  check.cppcheck  rltos_check.cppcheck
doc/: mainpage.c
docs/: Doxyfile  DoxygenLayout.xml  footer.html  index.html  index.md  mainpage.c
docs/doxy/: Doxyfile  DoxygenLayout.xml  deep dive.dox  deployment.dox  developing.dox  mainpage.dox  quickstart.dox
docs/pages/: deep dive.dox  developing.dox  mainpage.dox  ports.dox  quickstart.dox  todo.dox
example/Hello World/: Init.c  main.c  thread0.c  thread1.c
report/coverage/: index.html
report/coverage/Modules/: rltos_test.html
report/coverage/Modules/rltos_test/: rltos.c.html  rltos_task_list.c.html
rltos/: rltos.h
rltos/port/CPPUTEST_UNIT_TESTING/: rltos_port.c  rltos_port.h  rltos_scheduler_asm_dummy.c
rltos/port/RL78/: rltos_port.c  rltos_port.h
rltos/port/RL78/CLANG/: rltos_scheduler_asm.asm
rltos/port/RL78/IAR/: rltos_scheduler_asm.asm
rltos/rltos_kernel/: rltos.c
rltos/rltos_kernel/event_flags/: rltos_event_flags.c  rltos_event_flags.h
rltos/rltos_kernel/mutex/: rltos_mutex.c  rltos_mutex.h
rltos/rltos_kernel/queue/: rltos_queue.c  rltos_queue.h
rltos/rltos_kernel/semaphore/: rltos_semaphore.c  rltos_semaphore.h
rltos/rltos_kernel/task_list/: rltos_task_list.c  rltos_task_list.h
rltos_check-cppcheck-build-dir/: dummy.txt
src/: cppcheck-addon-ctu-file-list  rltos.h  rltos.h.dump
src/port/CPPUTEST_UNIT_TESTING/: rltos_port.c  rltos_port.h  rltos_scheduler_asm_dummy.c
src/port/RL78/: rltos_port.c  rltos_port.h
src/port/RL78/CCRL/: rltos_scheduler_asm.asm
src/port/RL78/CLANG/: rltos_scheduler_asm.asm
src/port/RL78/IAR/: rltos_scheduler_asm.asm
src/rltos_kernel/: rltos.c  rltos.c.dump
src/rltos_kernel/core/: rltos_task.c  rltos_task.h
src/rltos_kernel/core/task_scheduler/: rltos_task_scheduler.c  rltos_task_scheduler.h  rltos_task_scheduler_prv.h
src/rltos_kernel/event_flags/: rltos_event_flags.c  rltos_event_flags.c.dump  rltos_event_flags.h  rltos_event_flags.h.dump
src/rltos_kernel/events/: rltos_events.c  rltos_events.h
src/rltos_kernel/mutex/: rltos_mutex.c  rltos_mutex.c.dump  rltos_mutex.h  rltos_mutex.h.dump
src/rltos_kernel/queue/: rltos_queue.c  rltos_queue.c.dump  rltos_queue.h  rltos_queue.h.dump
src/rltos_kernel/semaphore/: rltos_semaphore.c  rltos_semaphore.c.dump  rltos_semaphore.h  rltos_semaphore.h.dump
src/rltos_kernel/task/: rltos_task.c  rltos_task.h
src/rltos_kernel/task/task_list/: rltos_task_list.c  rltos_task_list.h
src/rltos_kernel/task/task_scheduler/: rltos_task_scheduler.c  rltos_task_scheduler.h  rltos_task_scheduler_prv.h
src/rltos_kernel/task_list/: rltos_task_list.c  rltos_task_list.c.dump  rltos_task_list.h.dump
test/: CMakeLists.txt  all_tests.cpp
test/rltos_kernel/core/: task_tests.cpp
test/rltos_kernel/core/task_scheduler/: task_scheduler_tests.cpp
test/rltos_kernel/event_flags/: event_flags_tests.cpp
test/rltos_kernel/mutex/: mutex_tests.cpp
test/rltos_kernel/queue/: queue_tests.cpp
test/rltos_kernel/semaphore/: semaphore_tests.cpp
test/rltos_kernel/task/: task_tests.cpp
test/rltos_kernel/task/task_list/: task_list_tests.cpp
test/rltos_kernel/task/task_scheduler/: task_scheduler_tests.cpp
test/rltos_kernel/task_list/: task_list_tests.cpp
